--- a/calendar-test/src/components/Calendar/index.module.css
+++ b/calendar-test/src/components/Calendar/index.module.css
@@ -17,7 +17,7 @@
     flex-wrap: wrap;
 }
 
-.calendar > .empty, .day {
+.calendar .empty, .day {
     width: calc(100% / 7);
     text-align: center;
     line-height: 30px;
