feat: 完善日期点击事件

--- a/calendar-test/src/components/Calendar/index.module.css
+++ b/calendar-test/src/components/Calendar/index.module.css
@@ -35,3 +35,8 @@
 .calendar .last-month:hover, .next-month:hover {
     color: #7c7c7c;
 }
+
+.calendar .selected {
+  background-color: #ccc;
+  cursor: pointer;
+}
