--- a/calendar-component/src/components/Calendar/index.scss
+++ b/calendar-component/src/components/Calendar/index.scss
@@ -84,6 +84,10 @@
             &-current {
                 color: #000;
             }
+
+            &-date {
+                padding: 10px;
+            }
         }
    }
 }
