--- a/calendar-component/src/components/Calendar/index.scss
+++ b/calendar-component/src/components/Calendar/index.scss
@@ -85,6 +85,17 @@
                 color: #000;
             }
 
+            &-selected {
+                background: blue;
+                width: 28px;
+                height: 28px;
+                line-height: 28px;
+                text-align: center;
+                color: #fff;
+                border-radius: 50%;
+                cursor: pointer;
+            }
+
             &-date {
                 padding: 10px;
             }
